fixed horizontal scrolling, resized images in favorites

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,34 @@
 .App {
-    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
+}
   
-  .dogs__container {
-    width: 40rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 1rem;
-  }
+.dogs__container {
+  background-color: rgb(252, 237, 237);
+  width: 40em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1em;
+  justify-content: center;
+  padding: 2em 1em;
+  border-radius: 1em;
+}
   
-  .dogs__img {
-    width: 12rem;
-    height: 12rem;
-    object-fit: cover;
-    object-position: top right;
-    margin: auto 0;
-  }
-  
+.dogs__img {
+  width: 12em;
+  height: 12em;
+  object-fit: cover;
+  object-position: top right;
+  border-radius: 1em;
+}
+
+.fav__img {
+  width: 4em;
+  height: 4em;
+  object-fit: cover;
+  object-position: top right;
+  border-radius: 1em;
+}
